2008-02-26  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/update-notifier.c (get_osso_product_hardware): New.

2008-02-25  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* util.cc (make_global_package_list) : Add the title of the
	version column (N80908).

2008-02-22  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* util.cc : (entertainment_update_title) the label doesn't
	ellipsize unless it is too big; otherwise its requisition
	would be too small and the dialog wouldn't need to expand
	(start_entertaining_user) : the dialog's width can be
	between 400 and 700 pixels, so there is enough room for
	longer labels (N80495).

2008-02-21  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* ham-long-label.[ch] : Added legal notice.

2008-02-21  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/usr_files.h, src/user_files.h (user_file_remove): New, used
	to easily remove files from the per-user state directory.
	(user_file_get_state_dir_path): Create dir if it doesn't exist.
	(user_file_open_for_read): Don't take care of creating the
	directory, as user_file_get_state_dir_path will do the work.
	(user_file_open_for_write): Likewise.

	* src/update-notifier.c (update_seen_notifications): Added a new
	parameter (upno), to allow hiding the icon after duplicating the
	notification files. Added some extra checks too.
	(show_notification_menu_item_activated): Pass the upno ref to
	update_seen_notifications.
	(reject_notification_menu_item_activated): Likewise.
	(update_state): Initialize some pointers to NULL.
	(set_icon_visibility): Force the "unpressed state" for the status
	bar icon when changing the state.
	(check_for_notifications_thread): Fixed a problem based on opening
	a file for reading when writing, by libculr, was required. Also
	added extra logic to validate the downloaded file to be sure about
	if it's or not a valid notification file before writing it to
	disk.

	* src/log.cc (show_log_dialog_flow): Changed the management of the